<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grid Image Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="caption">Caption</string>
    <string name="fragment_image">Image Frag</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="lookup">Lookup</string>
    <string name="share">Share</string>
    <string name="full_image_activity">Fullscreen</string>
</resources>
